Profile cards nearly complete. Need tweaks to align text, fix btn, and add Mike's bio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,13 +28,48 @@ body {
     padding: 5px;
     border-radius: 5px;
 }
+/* About page */
 
 .about-page {
     margin-bottom: 100px;
 }
 
-.profile-img {
+.column {
+    margin-bottom: 15px;
+    padding: 0 8px;
+}
+
+/* Adds shadows */
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/*.profile-img {
     border-radius: 10px;
+}*/
+
+.about-container {
+    padding: 0 16px;
+}
+
+.title {
+    color: grey;
+}
+
+.contact-btn {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+}
+
+.contact-btn:hover {
+    background-color: green;
 }
 
 .about-paragraph {
